--- a/.dotter/cache.toml
+++ b/.dotter/cache.toml
@@ -1,4 +1,12 @@
 [symlinks]
+"hypr/hyprland.conf" = "/home/alchemmist/.config/hypr/hyprland.conf"
+"waybar/config.jsonc" = "/home/alchemmist/.config/waybar/config.jsonc"
+"waybar/scripts/baraction" = "/home/alchemmist/.config/waybar/scripts/baraction"
+"waybar/scripts/update-sys" = "/home/alchemmist/.config/waybar/scripts/update-sys"
+"waybar/scripts/waybar-wttr.py" = "/home/alchemmist/.config/waybar/scripts/waybar-wttr.py"
+"waybar/style/style-dark.css" = "/home/alchemmist/.config/waybar/style/style-dark.css"
+"waybar/style/style.css" = "/home/alchemmist/.config/waybar/style/style.css"
+"waybar/style.css" = "/home/alchemmist/.config/waybar/style.css"
 "zsh/.zshrc" = "/home/alchemmist/.zshrc"
 
 [templates]
