--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -4,6 +4,7 @@ depends = [
     "waybar", 
     "hyprland",
     "tmux",
+    "sway"
 ]
 
 
@@ -20,3 +21,5 @@ depends = [
 "tmux/.tmux.conf" = "~/.tmux.conf"
 "tmux/.tmux.conf.local" = "~/.tmux.conf.local"
 
+[sway.files]
+"sway" = "~/.config/sway"
