--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -24,7 +24,7 @@ monitor=,preferred,auto,1
 # # # Base soft # # #
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = waybar # Task panel
+exec-once = waybar -c ~/.config/waybar/hypr-config.json --style ~/.config/waybar/hypr-style.css # Task panel
 exec-once = swww-daemon --format xrgb # Wallpaper controller
 exec-once = flameshot # Screenshot application
 exec-once=/usr/lib/polkit-kde-authentication-agent-1 # Graphical password requester
@@ -32,13 +32,10 @@ exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 
 # # # My applications # # #
-# Rules for 
-exec-once = google-chome-stable
-exec-once = telegram
-
-
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
+exec-once = [workspace 2] google-chrome-stable
+exec-once = [workspace 3; float; move 300 70; size 1200 1100] telegram-desktop
+exec-once = [workspace 1; float; move 80 150; size 1300 900] kitty tmux
+exec-once = [workspace 10] obsidian
 
 # For all categories, see https://wiki.h
 input {
@@ -73,7 +70,7 @@ misc {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 10
+    rounding = 15
     
     blur { 
         enabled = true
@@ -82,8 +79,8 @@ decoration {
     }
 
     drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
+    shadow_range = 0
+    shadow_render_power = 0
     col.shadow = rgba(1a1a1aee)
 }
 
@@ -131,13 +128,28 @@ gestures {
 # windowrulev2 = opacity 0.8 0.8,class:^(kitty)$
 # windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
 # windowrulev2 = opacity 0.8 0.8,class:^(chromium)$
-# windowrulev2 = opacity 0.8 0.8,class:^(Code)$
+
+# Thunar
+windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
+windowrulev2 = float,class:^(thunar)$
+windowrulev2 = center,class:^(thunar)$
+
+# Qimgv
+windowrulev2 = float, class:^(qimgv)$
+windowrulev2 = float, class:^(qimgv)$
+
+
+
 layerrule = blur, notifications 
 layerrule = ignorezero, notifications
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
+
+# bind = ALT, Tab, bringactivetotop
+bind = ALT,Tab,cyclenext 
+bind = ALT,Tab,bringactivetotop
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, kitty  #open the terminal
@@ -162,8 +174,8 @@ bind = ,121, exec, pamixer -t # Speaker Mute FN+F1
 bind = ,122, exec, pamixer -d 5 # Volume lower key
 bind = ,123, exec, pamixer -i 5 # Volume Higher key
 bind = ,256, exec, pamixer --default-source -t # Mic mute key
-bind = ,232, exec, brightnessctl set 10%- # Screen brightness down FN+F7
-bind = ,233, exec, brightnessctl set 10%+ # Screen brightness up FN+F8
+bind = ,232, exec, brightnessctl set 2%- # Screen brightness down FN+F7
+bind = ,233, exec, brightnessctl set 2%+ # Screen brightness up FN+F8
 bind = ,237, exec, brightnessctl -d asus::kbd_backlight set 33%- # Keyboard brightness down FN+F2
 bind = ,238, exec, brightnessctl -d asus::kbd_backlight set 33%+ # Keyboard brightnes up FN+F3
 bind = ,210, exec, asusctl led-mode -n # Switch keyboard RGB profile FN+F4
@@ -205,4 +217,16 @@ bind = CTRL $mainMod, H, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod SHIFT, mouse:272, resizewindow
+
+# Resize with arrows
+bind = $mainMod SHIFT, h, resizeactive, -50 0
+bind = $mainMod SHIFT, l, resizeactive, 50 0
+bind = $mainMod SHIFT, k, resizeactive, 0 -50
+bind = $mainMod SHIFT, j, resizeactive, 0 50
+
+# Move window in tile group
+bind = $mainMod CTRL SHIFT, h, swapwindow, l
+bind = $mainMod CTRL SHIFT, l, swapwindow, r
+bind = $mainMod CTRL SHIFT, k, swapwindow, u
+bind = $mainMod CTRL SHIFT, j, swapwindow, d
 
