--- a/.dotter/cache.toml
+++ b/.dotter/cache.toml
@@ -1,5 +1,30 @@
 [symlinks]
 "hypr/hyprland.conf" = "/home/alchemmist/.config/hypr/hyprland.conf"
+"nvim/init.lua" = "/home/alchemmist/.config/nvim/init.lua"
+"nvim/lazy-lock.json" = "/home/alchemmist/.config/nvim/lazy-lock.json"
+"nvim/lua/core/bootstrap.lua" = "/home/alchemmist/.config/nvim/lua/core/bootstrap.lua"
+"nvim/lua/core/default_config.lua" = "/home/alchemmist/.config/nvim/lua/core/default_config.lua"
+"nvim/lua/core/init.lua" = "/home/alchemmist/.config/nvim/lua/core/init.lua"
+"nvim/lua/core/mappings.lua" = "/home/alchemmist/.config/nvim/lua/core/mappings.lua"
+"nvim/lua/core/utils.lua" = "/home/alchemmist/.config/nvim/lua/core/utils.lua"
+"nvim/lua/custom/README.md" = "/home/alchemmist/.config/nvim/lua/custom/README.md"
+"nvim/lua/custom/chadrc.lua" = "/home/alchemmist/.config/nvim/lua/custom/chadrc.lua"
+"nvim/lua/custom/configs/lspconfig.lua" = "/home/alchemmist/.config/nvim/lua/custom/configs/lspconfig.lua"
+"nvim/lua/custom/configs/null-ls.lua" = "/home/alchemmist/.config/nvim/lua/custom/configs/null-ls.lua"
+"nvim/lua/custom/configs/overrides.lua" = "/home/alchemmist/.config/nvim/lua/custom/configs/overrides.lua"
+"nvim/lua/custom/highlights.lua" = "/home/alchemmist/.config/nvim/lua/custom/highlights.lua"
+"nvim/lua/custom/init.lua" = "/home/alchemmist/.config/nvim/lua/custom/init.lua"
+"nvim/lua/custom/mappings.lua" = "/home/alchemmist/.config/nvim/lua/custom/mappings.lua"
+"nvim/lua/custom/plugins.lua" = "/home/alchemmist/.config/nvim/lua/custom/plugins.lua"
+"nvim/lua/plugins/configs/cmp.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/cmp.lua"
+"nvim/lua/plugins/configs/lazy_nvim.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/lazy_nvim.lua"
+"nvim/lua/plugins/configs/lspconfig.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/lspconfig.lua"
+"nvim/lua/plugins/configs/mason.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/mason.lua"
+"nvim/lua/plugins/configs/nvimtree.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/nvimtree.lua"
+"nvim/lua/plugins/configs/others.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/others.lua"
+"nvim/lua/plugins/configs/telescope.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/telescope.lua"
+"nvim/lua/plugins/configs/treesitter.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/treesitter.lua"
+"nvim/lua/plugins/init.lua" = "/home/alchemmist/.config/nvim/lua/plugins/init.lua"
 "sway/config" = "/home/alchemmist/.config/sway/config"
 "tmux/.tmux.conf" = "/home/alchemmist/.tmux.conf"
 "tmux/.tmux.conf.local" = "/home/alchemmist/.tmux.conf.local"
@@ -12,6 +37,10 @@
 "waybar/style/style.css" = "/home/alchemmist/.config/waybar/style/style.css"
 "waybar/sway-config.json" = "/home/alchemmist/.config/waybar/sway-config.json"
 "waybar/sway-style.css" = "/home/alchemmist/.config/waybar/sway-style.css"
+"wofi/config" = "/home/alchemmist/.config/wofi/config"
+"wofi/style/style-dark.css" = "/home/alchemmist/.config/wofi/style/style-dark.css"
+"wofi/style/style.css" = "/home/alchemmist/.config/wofi/style/style.css"
+"wofi/style.css" = "/home/alchemmist/.config/wofi/style.css"
 "zsh/.zshrc" = "/home/alchemmist/.zshrc"
 
 [templates]
