--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -132,12 +132,16 @@ gestures {
 # Thunar
 windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
 windowrulev2 = float,class:^(thunar)$
+windowrulev2 = size 800 800,class:^(thunar)$
 windowrulev2 = center,class:^(thunar)$
 
 # Qimgv
 windowrulev2 = float, class:^(qimgv)$
 windowrulev2 = float, class:^(qimgv)$
 
+windowrulev2 = float, title:^wallpaper_pack_selector$
+windowrulev2 = center, title:^wallpaper_pack_selector$
+windowrulev2 = size 300 300, title:^wallpaper_pack_selector$
 
 
 layerrule = blur, notifications 
@@ -154,17 +158,19 @@ bind = ALT,Tab,bringactivetotop
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, kitty  #open the terminal
 bind = ALT, F4, killactive, # close the active window
-bind = $mainMod SHIFT, L, exec, swaylock # Lock the screen
+bind = ALT, L, exec, swaylock # Lock the screen
 bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout window
 bind = $mainMod SHIFT, M, exit # Exit Hyprland all together no (force quit Hyprland)
 bind = $mainMod, E, exec, thunar # Show the graphical file browser
+bind = $mainMod, B, exec, google-chrome-stable # Show the graphical file browser
 bind = $mainMod, T, togglefloating # Allow a window to float
-bind = ALT, SPACE, exec, wofi # Show the graphicall app launcher
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
+bind = ALT, SPACE, exec, wofi # Show the graphicall app launcher
 bind = $mainMod, S, exec, flameshot gui --path=$HOME/Pictures/screenshots/ --clipboard # take a screenshot
 bind = $mainMod SHIFT, R, exec, ~/scripts/reload_waybar.sh
 bind = $mainMod, W, exec, ~/scripts/swww_random.sh
+bind = $mainMod SHIFT, W, exec, kitty --title wallpaper_pack_selector /home/alchemmist/scripts/select_wallpaper_pack.sh
 bind = SUPER, C, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 
 # ROG G15 Strix (2021) Specific binds
