--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -63,6 +63,7 @@ general {
     layout = dwindle
 }
 
+
 misc {
     disable_hyprland_logo = yes
 }
@@ -128,6 +129,17 @@ gestures {
 # windowrulev2 = opacity 0.8 0.8,class:^(kitty)$
 # windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
 # windowrulev2 = opacity 0.8 0.8,class:^(chromium)$
+
+workspace=1,persistent:true
+workspace=2,persistent:true
+workspace=3,persistent:true
+workspace=4,persistent:true
+workspace=5,persistent:true
+workspace=6,persistent:true
+workspace=7,persistent:true
+workspace=8,persistent:true
+workspace=9,persistent:true
+workspace=10,persistent:true
 
 # Thunar
 windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
