--- a/waybar/sway-config.json
+++ b/waybar/sway-config.json
@@ -23,18 +23,9 @@
         "only-active": false,
         "all-outputs": true,
         "disable-scroll": true,
-
-        "persistent_workspaces": {
-            "1": [],
-            "2": [],
-            "3": [],
-            "4": [],
-            "5": [],
-            "6": [],
-            "7": [],
-            "8": [],
-            "9": [],
-            "10": []
+        "persistent_workspaces": [
+                "1", "2", "3", "4", "5", "6", "7", "8", "9", "10"
+            ]
         }
     },
     
