--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -163,6 +163,7 @@ layerrule = ignorezero, notifications
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
+
 # bind = ALT, Tab, bringactivetotop
 bind = ALT,Tab,cyclenext 
 bind = ALT,Tab,bringactivetotop
@@ -180,7 +181,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
 bind = ALT, SPACE, exec, wofi # Show the graphicall app launcher
 bind = $mainMod, S, exec, flameshot gui --path=$HOME/Pictures/screenshots/ --clipboard # take a screenshot
-bind = $mainMod SHIFT, R, exec, ~/scripts/reload_waybar.sh
+bind = $mainMod SHIFT, R, exec, killall waybar ; waybar --config /home/alchemmist/.config/waybar/hypr-config.json --style /home/alchemmist/.config/waybar/hypr-style.css
 bind = $mainMod, W, exec, ~/scripts/swww_random.sh
 bind = $mainMod SHIFT, W, exec, kitty --title wallpaper_pack_selector /home/alchemmist/scripts/select_wallpaper_pack.sh
 bind = SUPER, C, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
