--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -30,6 +30,7 @@ exec-once = flameshot # Screenshot application
 exec-once=/usr/lib/polkit-kde-authentication-agent-1 # Graphical password requester
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
+exec-once = hypridle
 
 # # # My applications # # #
 exec-once = [workspace 2] google-chrome-stable
@@ -171,9 +172,9 @@ bind = ALT,Tab,bringactivetotop
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, kitty  #open the terminal
 bind = ALT, F4, killactive, # close the active window
-bind = ALT, L, exec, swaylock # Lock the screen
+bind = , 135, exec, hyprlock # Lock the screen
 bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout window
-bind = $mainMod SHIFT, M, exit # Exit Hyprland all together no (force quit Hyprland)
+bind = $mainMod CTRL SHIFT, M, exit # Exit Hyprland all together no (force quit Hyprland)
 bind = $mainMod, E, exec, thunar # Show the graphical file browser
 bind = $mainMod, B, exec, google-chrome-stable # Show the graphical file browser
 bind = $mainMod, T, togglefloating # Allow a window to float
