--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -36,7 +36,7 @@ exec-once = hypridle
 exec-once = [workspace 2] google-chrome-stable
 exec-once = [workspace 3; float; move 300 70; size 1200 1100] telegram-desktop
 exec-once = [workspace 1; float; move 80 150; size 1300 900] kitty tmux
-exec-once = [workspace 10] obsidian
+exec-once = [workspace 10; float; move 160 140; size 1400 950] obsidian
 
 # For all categories, see https://wiki.h
 input {
@@ -118,18 +118,7 @@ gestures {
     workspace_swipe_distance = 180
 }
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# rules below would make the specific app transparent
-# windowrulev2 = opacity 0.8 0.8,class:^(kitty)$
-# windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
-# windowrulev2 = opacity 0.8 0.8,class:^(chromium)$
 
 workspace=1,persistent:true
 workspace=2,persistent:true
@@ -143,7 +132,6 @@ workspace=9,persistent:true
 workspace=10,persistent:true
 
 # Thunar
-windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
 windowrulev2 = float,class:^(thunar)$
 windowrulev2 = size 800 800,class:^(thunar)$
 windowrulev2 = center,class:^(thunar)$
@@ -152,9 +140,14 @@ windowrulev2 = center,class:^(thunar)$
 windowrulev2 = float, class:^(qimgv)$
 windowrulev2 = float, class:^(qimgv)$
 
+# Custom wallpaper pack selector
 windowrulev2 = float, title:^wallpaper_pack_selector$
 windowrulev2 = center, title:^wallpaper_pack_selector$
 windowrulev2 = size 300 300, title:^wallpaper_pack_selector$
+
+# tmp: rule for selenium test window
+windowrulev2 = workspace 9,class:^(Chromium-browser)$
+
 
 
 layerrule = blur, notifications 
