--- a/waybar/hypr-config.json
+++ b/waybar/hypr-config.json
@@ -8,7 +8,19 @@
     "height": 50,
     "modules-left": ["clock#time", "clock#date", "hyprland/workspaces"],
     "modules-center": [],
-    "modules-right": ["custom/temperature", "memory","cpu", "custom/weather","network", "bluetooth", "temperature","battery", "backlight", "pulseaudio","pulseaudio#microphone", "hyprland/language", "tray"],
+    "modules-right": ["custom/pacman_updates", "custom/paru_updates", "custom/temperature", "memory","cpu", "custom/weather","network", "bluetooth", "temperature","battery", "backlight", "pulseaudio","pulseaudio#microphone", "hyprland/language", "tray"],
+
+    "custom/pacman_updates": {
+        "exec": "checkupdates | wc -l",
+        "interval": 10,
+        "format": " {}"
+    },
+
+    "custom/paru_updates": {
+        "exec": "paru -Qu | wc -l",
+        "interval": 10,
+        "format": "󰣇 {}"
+    },
 
      "cpu": {
         "interval": 5,
