--- a/.dotter/cache.toml
+++ b/.dotter/cache.toml
@@ -34,6 +34,7 @@
 "nvim/lua/plugins/init.lua" = "/home/alchemmist/.config/nvim/lua/plugins/init.lua"
 "scripts/swww_random.sh" = "/home/alchemmist/scripts/swww_random.sh"
 "scripts/tdm.sh" = "/home/alchemmist/scripts/tdm.sh"
+"scripts/toggle_caffeine.sh" = "/home/alchemmist/scripts/toggle_caffeine.sh"
 "scripts/wallpaper_pack_selector.sh" = "/home/alchemmist/scripts/wallpaper_pack_selector.sh"
 "ssh/config" = "/home/alchemmist/.ssh/config"
 "sway/config" = "/home/alchemmist/.config/sway/config"
