--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -42,7 +42,7 @@ exec-once = [workspace 10; float; move 160 140; size 1400 950] obsidian
 input {
     kb_layout = us,ru
     kb_variant = querty
-    kb_options = grp:win_space_toggle,ctrl:nocaps
+    kb_options = ctrl:nocaps,grp:shifts_toggle # grp:win_space_toggle,
     follow_mouse = 1
 
     touchpad {
@@ -145,9 +145,13 @@ windowrulev2 = float, title:^wallpaper_pack_selector$
 windowrulev2 = center, title:^wallpaper_pack_selector$
 windowrulev2 = size 300 300, title:^wallpaper_pack_selector$
 
-# tmp: rule for selenium test window
+# Chromium in test mode (for parsing)
 windowrulev2 = workspace 9,class:^(Chromium-browser)$
 
+# monori
+windowrulev2 = float,class:^(monori)$
+windowrulev2 = center,class:^(monori)$
+windowrulev2 = size 1200 900,class:^(monori)$
 
 
 layerrule = blur, notifications 
@@ -179,6 +183,7 @@ bind = $mainMod SHIFT, R, exec, killall waybar ; waybar --config /home/alchemmis
 bind = $mainMod, W, exec, ~/scripts/swww_random.sh
 bind = $mainMod SHIFT, W, exec, kitty --title wallpaper_pack_selector /home/alchemmist/scripts/wallpaper_pack_selector.sh
 bind = SUPER, C, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+bind = CTRL, apostrophe, exec, wtype -P right -p right
 
 # ROG G15 Strix (2021) Specific binds
 bind = ,156, exec, rog-control-center # ASUS Armory crate key
