--- a/.dotter/cache.toml
+++ b/.dotter/cache.toml
@@ -33,6 +33,7 @@
 "nvim/lua/plugins/configs/telescope.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/telescope.lua"
 "nvim/lua/plugins/configs/treesitter.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/treesitter.lua"
 "nvim/lua/plugins/init.lua" = "/home/alchemmist/.config/nvim/lua/plugins/init.lua"
+"scripts/battery_stat.sh" = "/home/alchemmist/scripts/battery_stat.sh"
 "scripts/swww_random.sh" = "/home/alchemmist/scripts/swww_random.sh"
 "scripts/tdm.sh" = "/home/alchemmist/scripts/tdm.sh"
 "scripts/toggle_caffeine.sh" = "/home/alchemmist/scripts/toggle_caffeine.sh"
