--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -148,6 +148,9 @@ windowrulev2 = size 300 300, title:^wallpaper_pack_selector$
 # Chromium in test mode (for parsing)
 windowrulev2 = workspace 9,class:^(Chromium-browser)$
 
+# PyQT5 window
+windowrulev2 = float, title:^test_window$
+
 # monori
 windowrulev2 = float,class:^(monori)$
 windowrulev2 = center,class:^(monori)$
