--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -14,7 +14,7 @@ background {
 input-field {
     monitor =
     size = 300, 50
-    outline_thickness = 3
+    outline_thickness = 5
     dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
     dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
     dots_center = true
@@ -60,6 +60,17 @@ label {
     font_size = 15
     font_family = JetBrainsMonoNerdFontMono-ExtraLightItalic
     position = -15 10
+    halign = right
+    valign = bottom
+}
+
+label {
+    monitor = 
+    text = cmd[update:100] echo "$(/home/alchemmist/scripts/battery_stat.sh)"
+    color = %foreground
+    font_size = 15
+    font_family = JetBrainsMonoNerdFontMono-ExtraLightItalic
+    position = -50 10
     halign = right
     valign = bottom
 }
