--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -14,3 +14,8 @@ listener {
     timeout = 180                                 # 5min
     on-timeout = loginctl lock-session            # lock screen when timeout has passed
 }
+
+listener {
+    timeout = 900                                 # 5min
+    on-timeout = systemctl poweroff               # shutdown after 300 seconds
+}
