--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -55,7 +55,7 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     gaps_in = 8
-    gaps_out = 15
+    gaps_out = 10, 15, 15, 15
     border_size = 0
     #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.active_border=rgb(cdd6f4)
