--- a/.dotter/cache.toml
+++ b/.dotter/cache.toml
@@ -24,6 +24,7 @@
 "nvim/lua/custom/init.lua" = "/home/alchemmist/.config/nvim/lua/custom/init.lua"
 "nvim/lua/custom/mappings.lua" = "/home/alchemmist/.config/nvim/lua/custom/mappings.lua"
 "nvim/lua/custom/plugins.lua" = "/home/alchemmist/.config/nvim/lua/custom/plugins.lua"
+"nvim/lua/custom/snippets.lua" = "/home/alchemmist/.config/nvim/lua/custom/snippets.lua"
 "nvim/lua/plugins/configs/cmp.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/cmp.lua"
 "nvim/lua/plugins/configs/lazy_nvim.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/lazy_nvim.lua"
 "nvim/lua/plugins/configs/lspconfig.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/lspconfig.lua"
@@ -34,9 +35,12 @@
 "nvim/lua/plugins/configs/treesitter.lua" = "/home/alchemmist/.config/nvim/lua/plugins/configs/treesitter.lua"
 "nvim/lua/plugins/init.lua" = "/home/alchemmist/.config/nvim/lua/plugins/init.lua"
 "scripts/battery_stat.sh" = "/home/alchemmist/scripts/battery_stat.sh"
+"scripts/google-calendar.py" = "/home/alchemmist/scripts/google-calendar.py"
+"scripts/requirements.txt" = "/home/alchemmist/scripts/requirements.txt"
 "scripts/swww_random.sh" = "/home/alchemmist/scripts/swww_random.sh"
 "scripts/tdm.sh" = "/home/alchemmist/scripts/tdm.sh"
 "scripts/toggle_caffeine.sh" = "/home/alchemmist/scripts/toggle_caffeine.sh"
+"scripts/token.json" = "/home/alchemmist/scripts/token.json"
 "scripts/wallpaper_pack_selector.sh" = "/home/alchemmist/scripts/wallpaper_pack_selector.sh"
 "ssh/config" = "/home/alchemmist/.ssh/config"
 "sway/config" = "/home/alchemmist/.config/sway/config"
