--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -131,10 +131,14 @@ workspace=8,persistent:true
 workspace=9,persistent:true
 workspace=10,persistent:true
 
+# Yazi
+windowrulev2 = float,title:^(yazi)$
+windowrulev2 = size 800 800,title:^(yazi)$
+windowrulev2 = center,title:^(yazi)$
 # Thunar
-windowrulev2 = float,class:^(thunar)$
-windowrulev2 = size 800 800,class:^(thunar)$
-windowrulev2 = center,class:^(thunar)$
+# windowrulev2 = float,class:^(thunar)$
+# windowrulev2 = size 800 800,class:^(thunar)$
+# windowrulev2 = center,class:^(thunar)$
 
 # Qimgv
 windowrulev2 = float, class:^(qimgv)$
@@ -175,7 +179,7 @@ bind = ALT, F4, killactive, # close the active window
 bind = , 135, exec, hyprlock # Lock the screen
 bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout window
 bind = $mainMod CTRL SHIFT, M, exit # Exit Hyprland all together no (force quit Hyprland)
-bind = $mainMod, E, exec, thunar # Show the graphical file browser
+bind = $mainMod, E, exec, kitty --title yazi -e yazi ~ #thunar # Show the graphical file browser
 bind = $mainMod, B, exec, google-chrome-stable # Show the graphical file browser
 bind = $mainMod, T, togglefloating # Allow a window to float
 bind = $mainMod, P, pseudo, # dwindle
