--- a/waybar/hypr-config.json
+++ b/waybar/hypr-config.json
@@ -8,14 +8,15 @@
     "height": 40,
     "modules-left": ["custom/wofi", "clock#time", "clock#date", "hyprland/workspaces"],
     "modules-center": [],
-    "modules-right": ["custom/google_calendar", "custom/pacman_updates", "custom/paru_updates", "custom/temperature", "memory","cpu", "custom/weather","network", "bluetooth", "temperature","battery", "backlight", "pulseaudio","pulseaudio#microphone", "custom/caffeine", "hyprland/language", "idle_inhibitor", "tray"],
+    "modules-right": ["custom/google_calendar", "custom/pacman_updates", "custom/paru_updates", "custom/temperature", "memory","cpu", "custom/weather","network", "bluetooth", "temperature","battery", "backlight", "pulseaudio","pulseaudio#microphone", "custom/caffeine", "hyprland/language", "idle_inhibitor"],
 
     "custom/google_calendar": {
         "exec": "~/code/google-calendar/venv/bin/python ~/scripts/google-calendar.py",
         "interval": 100,
         "format": "{}",
         "return-type": "json",
-        "tooltip": true
+        "tooltip": true,
+        "max-lenght": 355
     },
 
     "custom/wofi": {
