--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -135,10 +135,11 @@ workspace=10,persistent:true
 windowrulev2 = float,title:^(yazi)$
 windowrulev2 = size 800 800,title:^(yazi)$
 windowrulev2 = center,title:^(yazi)$
-# Thunar
-# windowrulev2 = float,class:^(thunar)$
-# windowrulev2 = size 800 800,class:^(thunar)$
-# windowrulev2 = center,class:^(thunar)$
+
+# Thunar (browser file selector)
+windowrulev2 = float,title:^(Open File)$
+windowrulev2 = size 800 800,class:^(Open File)$
+windowrulev2 = center,class:^(Open File)$
 
 # Qimgv
 windowrulev2 = float, class:^(qimgv)$
