--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -131,6 +131,12 @@ workspace=8,persistent:true
 workspace=9,persistent:true
 workspace=10,persistent:true
 
+# Syncthing
+windowrulev2 = float,title:^(Syncthing)$
+windowrulev2 = size 1035 650,title:^(Syncthing)$
+windowrulev2 = center,title:^(Syncthing)$
+
+
 # Yazi
 windowrulev2 = float,title:^(yazi)$
 windowrulev2 = size 800 800,title:^(yazi)$
